Se termina de configurar Pom y Properties